(fix) pagination alignment

--- a/apps/block_scout_web/assets/css/components/_pagination_container.scss
+++ b/apps/block_scout_web/assets/css/components/_pagination_container.scss
@@ -51,7 +51,8 @@ $pagination-page-link-color-active: #fff !default;
     padding: 0;
 
     @include media-breakpoint-down(sm) {
-      margin: 0 auto;
+      justify-content: space-between;
+      margin: 0;
     }
 
     .page-item {
